--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "build": "webpack --env production",
     "prerender": "SCRIVITO_PRERENDER=true npm run build && node buildPrerendering/prerender_content.js",
     "start": "webpack serve",
-    "eslint": "eslint --max-warnings 0 src/ prerender/",
+    "eslint": "eslint --max-warnings 0 src/",
     "es-check": "npm run build && es-check es5 --not=build/assets/scrivito_extensions. './build/**/*.js'"
   }
 }
